# telegram-auto-reg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  QUICKSTART.md  README.md  Start.bat  Start.pyw  Start.vbs  TelegramAutoReg.spec  build.py  config.yaml.example  pyproject.toml  requirements.txt  run.py  telegram_regger.py  version_info.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  commitlint.yml  release.yml
assets/: README.md
auto_reger/: __init__.py  config.py  exceptions.py  logging_config.py  retry.py  sessions.py  stats.py
auto_reger/emulator/: __init__.py  base.py  instagram.py  telegram.py
auto_reger/windows/: __init__.py  base.py  onion.py  telegram_desktop.py  vpn.py
cli/: __init__.py  __main__.py  ui.py
gui/: __init__.py  app.py  config_manager.py
tests/: test_exceptions.py  test_logging_config.py  test_retry.py
